--- a/Challenge-5/tsconfig.json
+++ b/Challenge-5/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["*.ts", "*/**.ts"],  /* Adjust the path based on your project structure */
+  "exclude": ["node_modules"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -105,5 +107,5 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
 }
