--- a/Challenge-5/package.json
+++ b/Challenge-5/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "start": "nodemon index.ts",
+    "dev": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "sequelize": "^6.34.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/multer": "^1.4.10",
     "@types/node": "^20.9.0",
     "concurrently": "^8.2.2",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.2.2"
   }
 }
