--- a/Challange-7/Backend/package.json
+++ b/Challange-7/Backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon index.ts",
     "dev": "ts-node-dev index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "esl": "eslint */**.ts",
+    "build": "tsc -p .",
+    "prod": "nodemon ./dist/index.js"
   },
   "keywords": [],
   "author": "",
